Partial_14Dec2021/force-app/main/default/objects/AP_Taluk_Master__c/AP_Taluk_Master__c.object-meta.xml
<CustomObject>
    <label>APPL Taluk Master</label>
    <nameField>
        <label>Taluk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taluk Masters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>