Partial_14Dec2021/force-app/main/default/objects/AP_Taluk_Master__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <label>Cluster</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adilabad</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Allahabad</fullName>
            </value>
            <value>
                <fullName>Amaravathi</fullName>
            </value>
            <value>
                <fullName>Ambikapur</fullName>
            </value>
            <value>
                <fullName>Amritsar</fullName>
            </value>
            <value>
                <fullName>Anantpur</fullName>
            </value>
            <value>
                <fullName>Andaman &amp; Nicobar</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Baroda</fullName>
            </value>
            <value>
                <fullName>Bathinda</fullName>
            </value>
            <value>
                <fullName>Belgaum</fullName>
            </value>
            <value>
                <fullName>Bhandara</fullName>
            </value>
            <value>
                <fullName>Bhopal</fullName>
            </value>
            <value>
                <fullName>Bijapur</fullName>
            </value>
            <value>
                <fullName>Bikaner</fullName>
            </value>
            <value>
                <fullName>Bilaspur</fullName>
            </value>
            <value>
                <fullName>Blr Zone</fullName>
            </value>
            <value>
                <fullName>Central Bihar</fullName>
            </value>
            <value>
                <fullName>Chandigarh</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
            <value>
                <fullName>Cuddapah</fullName>
            </value>
            <value>
                <fullName>Delhi-Ncr</fullName>
            </value>
            <value>
                <fullName>DL-NORTH-WEST</fullName>
            </value>
            <value>
                <fullName>DL-SOUTH-CENTRAL</fullName>
            </value>
            <value>
                <fullName>Durg</fullName>
            </value>
            <value>
                <fullName>Faridabad DL</fullName>
            </value>
            <value>
                <fullName>Ghaziabad</fullName>
            </value>
            <value>
                <fullName>Goa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>