Partial_14Dec2021/force-app/main/default/objects/AP_Taluk_Master__c/fields/Dealer_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer/Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Taluk Masters</relationshipLabel>
    <relationshipName>Taluk_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>