Partial_14Dec2021/force-app/main/default/objects/AP_Taluk_Master__c/fields/New_Market__c.field-meta.xml
<CustomField>
    <fullName>New_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Market?</label>
    <type>Checkbox</type>
</CustomField>