Partial_14Dec2021/force-app/main/default/objects/AP_Taluk_Master__c/fields/New_Market_Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Market_Opened_Date__c</fullName>
    <label>New Market Opened Date</label>
    <type>Date</type>
</CustomField>