Partial_14Dec2021/force-app/main/default/objects/AP_Taluk_Master__c/fields/Town__c.field-meta.xml
<CustomField>
    <fullName>Town__c</fullName>
    <label>Town</label>
    <length>50</length>
    <type>Text</type>
</CustomField>