Partial_14Dec2021/force-app/main/default/objects/AP_Taluk_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cluster__c</columns>
    <columns>State__c</columns>
    <columns>District__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>