Partial_14Dec2021/force-app/main/default/objects/AP_Taluk_Master__c/listViews/Karnataka.listView-meta.xml
<ListView>
    <fullName>Karnataka</fullName>
    <columns>NAME</columns>
    <columns>District__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Tamil Nadu</value>
    </filters>
    <label>Karnataka</label>
</ListView>